add focus + enter +  value

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,12 @@
     
     
     <input #box  (keyup) = "oneKey(box.value)" >
-    <p>{{ box.value }}</p>
+    <p> {{ box.value }}</p>
+    <p>+ le bonjour: {{ value }}</p>
 
-    <p>{{ value }}</p>
+    
+    <input #boxe2 (keyup.enter) = "values=boxe2.value" >
+    <p>appuyer sur enter :{{ values }}</p>
 
+    <input #boxe3 (keyup.enter) = "values=boxe3.value" (blur) = "values=boxe3.value" >
+    <p>appuyer sur enter avec focus :{{ values }}</p>
