--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,18 @@
-
-    <h1>{{ title }}</h1>
-
-
-    <p *ngIf="age > 18"> Ce message est destiné aux plus de 18 ans</p>
-
-    <ul>
-        <li *ngFor="let pokemon of pokemons">{{ pokemon.name}}</li>
-    </ul>
+<h1 class='center'>Pokémons</h1>
+<div class='container'>
+<div class="row">
+<div *ngFor='let pokemon of pokemons' class="col s6 m4">
+  <div class="card horizontal" (click)="selectPokemon(pokemon)">
+    <div class="card-image">
+      <img [src]="pokemon.picture">
+    </div>
+    <div class="card-stacked">
+      <div class="card-content">
+        <p>{{ pokemon.name }}</p>
+        <p><small>{{ pokemon.created }}</small></p>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+</div>
